# vera-harness

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.toml  rust-toolchain.toml
.github/workflows/: release.yml
completions/: vera.bash  vera.fish  vera.zsh
docs/: capability-expansion-benchmark.md  capability-expansion-spike.md
packaging/: install.sh
packaging/homebrew/: vera-harness.rb
scripts/: benchmark-capabilities.sh  benchmark-startup.sh  check-release.sh
src/: app.rs  auth.rs  browser.rs  cli.rs  config.rs  error.rs  events.rs  extensions.rs  keybindings.rs  main.rs  paths.rs  processes.rs  prompt.rs  providers.rs  safety.rs  sessions.rs  settings.rs  subagents.rs  tools.rs  ui.rs  worktrees.rs
