[package]
name = "vera-harness"
version = "0.1.0-alpha.18"
edition = "2024"
description = "Vera, a macOS-first coding agent CLI"
license = "MIT"
repository = "https://github.com/virdis-agent/vera-harness"
default-run = "vera"

[[bin]]
name = "vera"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
dirs = "6"
fs2 = "0.4"
futures-util = "0.3"
ignore = "0.4"
libc = "0.2"
portable-pty = "0.9"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
which = "7"

[dev-dependencies]
assert_cmd = "2"
httpmock = "0.7"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
